# sts-ai-lab

./: .gitignore  README.md  pyproject.toml
02_local_ai/: EXPERIMENT_001_LLAMA32_1B.md
03_llms/: EXPERIMENT_005_STS_MENTOR_PERSONA.md
04_agents/: EXPERIMENT_006_REUSABLE_STS_MENTOR.md  Modelfile.sts-fast  Modelfile.sts-mentor-high  Modelfile.sts-mentor-low  STS_MENTOR_SYSTEM_PROMPT.md
agents/: code_agent.json  code_agent.md  research_agent.json  research_agent.md  sts_mentor.json  sts_mentor.md
app/: agent_config.py  agent_registry.py  agent_runtime.py  agents.py  ai_engine.py  approval.py  audit_log.py  change_planner.py  chat.py  cli.py  code_understanding.py  command_handlers.py  command_registry.py  config.py  design_artifact.py  experiment_logger.py  experiments.py  file_tools.py  goal_analyzer.py  input_classifier.py  knowledge_loader.py  knowledge_search.py  memory.py  mentor.py  model_execution.py  models.py  ollama_client.py  patch_drafter.py  patch_proposal.py  project.py  project_index.py  prompt_builder.py  prompt_loader.py  proposal.py  response_processor.py  risk_analyzer.py  runtime_evaluation.py  status.py  tool_registry.py  tool_router.py
docs/: AI_LAB_CHARTER.md  CODE_AGENT_ROADMAP.md
experiments/: 20260628_113832_memory_test.md  20260628_131805_persistent_memory_verified.md  20260628_132212_cli_experiment_logger_test.md  20260629_004201_mentor_session_note.md
knowledge/: ai_governance.md  sts_ai_lab.md
scripts/: run_sts_mentor.sh  run_sts_mentor_temp.sh
tests/: test_agent_definitions.py  test_agent_runtime.py  test_audit_log.py  (+11 more)
(+2 files in other folders)
